<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TP2-Android</string>
    <string name="title_section1">Cinémas</string>
    <string name="title_section2">Films</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="titre_film">Titre</string>
    <string name="pays_film">Pays</string>
    <string name="genre_film">Genre</string>
    <string name="classe_film">Classe</string>
    <string name="réalisateur_film">Réaliser par ________</string>
    <string name="duree_film">Durée : __ minutes</string>
    <string name="btnAjouter">Ajouter</string>
    <string name="commentaires">Commentaires</string>
    <string name="ajouterUnCommentaire">Ajouter un commentaire</string>
    <string name="ajouterVotreCommentaire">Ajouter votre commentaire</string>
    <string name="votrePseudo">Votre pseudo</string>
    <string name="note">Note</string>
    <string name="sur10">/10</string>
</resources>
