<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <GridLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="3"
            android:useDefaultMargins="true"
            tools:context="ca.qc.cstj.android.employus.DetailEmployeFragment">

            <ImageView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_height="200dp"
                android:layout_width="150dp"/>

            <GridLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:rowCount="6"
                android:columnCount="3"
                tools:context="ca.qc.cstj.android.employus.DetailEmployeFragment">

                <TextView
                    android:id="@+id/tvTitre"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:hint="@string/titre_film"
                    android:ems="12" />

                <TextView
                    android:id="@+id/tvPays"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:text="@string/pays_film"
                    />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:text="@string/genre_film"
                    />

                <TextView
                    android:id="@+id/tvClasse"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:text="@string/classe_film"
                    />

                <TextView
                    android:id="@+id/tvRealisateur"
                    android:layout_row="4"
                    android:layout_column="2"
                    android:text="@string/réalisateur_film"
                    />

                <TextView
                    android:id="@+id/tvDuree"
                    android:layout_row="5"
                    android:layout_column="2"
                    android:text="@string/duree_film"
                    />

            </GridLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_width="400dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnAjouter"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@+string/btnAjouter" />
            </LinearLayout>
        </GridLayout>
    </ScrollView>
</LinearLayout>
